--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
-== README
+##[Medicare Data Visualization](http://107.170.158.206/)
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+###Description:
 
-Things you may want to cover:
+This is a simple visualization of some [Medicare data](https://www.cms.gov/Research-Statistics-Data-and-Systems/Statistics-Trends-and-Reports/Medicare-Provider-Charge-Data/Physician-and-Other-Supplier.html "Medicare Provider Utilization and Payment Data: Physician and Other Supplier") that I did to get a taste for D3 and deployment using Digital Ocean. Enjoy!
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
